Quick fixes (broken link, CSS, missing link)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li><a href="http://raphaeljs.com/">Raphael.js</a> for all the vector graphics that make up the canvas.</li>
           <li><a href="http://jquery.com/">JQuery</a> for... well, JQuery. <a href="http://jqueryui.com/">JQuery UI</a> for a few UI elements, and <a href="http://documentcloud.github.com/underscore/">Underscore.js</a> for a couple really awesome helper functions.</li> 
           <li><a href="https://github.com/mynyml/watchr">Watchr</a> for providing continuous compilation.</li>
-          <li>Lea Verou's <a href="http://leaverou.github.com/prefixfree/">Prefix-Free</a> for not having to worry about distributor prefixes.</li>
+          <li>Lea Verou's <a href="http://leaverou.github.com/prefixfree/">Prefix-Free</a> for not having to worry about distributor prefixes. Except that I still need `-webkit-` prefixes... ¬_¬</li>
           <li>Finally, props to Xueqiao Xu(<a href="https://github.com/qiao/">qiao</a>) and his excellent <a href="https://github.com/qiao/PathFinding.js">PathFinding.js</a> library for a great starting point.<br />Go check it out. Seriously.</li>
       </div>
     </div>
@@ -96,7 +96,7 @@
   </div>
 
   <footer>
-      Project Hosted on <a href="http://github.com/TheOnlyRew/myGame_of_Life">Github</a>
+      Project Hosted on <a href="http://github.com/TheOnlyRew/Game_of_Life.js">Github</a>
   </footer>
 
   <!--And then there was JavaScript. And CoffeeScript too, but it
